# solana-lookup

./: README.md
examples/vue-app/: package-lock.json  package.json  vue.config.js
examples/vue-app/src/: App.vue  solanaKey.json
examples/vue-app/src/components/: HelloWorld.vue  Helloworld2.vue
program/: .gitignore  Cargo.toml
program/src/: instructions.rs  lib.rs  processor.rs  state.rs
program/tests/: functional.rs
scripts/: package.json  runkit.js  tsconfig.json
scripts/keys/: programId.json  secp256k1.json
scripts/src/: index.ts  instruction.ts  lib.ts  main.ts
secp-verfication/: Cargo.toml  runkit.js
secp-verfication/nodejs/: package-lock.json  package.json  runkit.js
secp-verfication/nodejs/src/: instruction.ts  lib.ts  setup.ts
secp-verfication/src/: entrypoint.rs  error.rs  instructions.rs  lib.rs  processor.rs  state.rs
