[package]
name = "secp-verfication"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.7.9"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
thiserror = "1.0.23"
# libsecp256k1 = "0.7.0"

[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"

[lib]
name = "solsecp"
version = "1.01"
crate-type = ["cdylib", "lib"]
